--- a/README.Rmd
+++ b/README.Rmd
@@ -74,7 +74,7 @@ Things you can do on an all numeric ParamSet:
 ps = ParamSetFlat$new(
   params = c(
     list(ParamInt$new(id = "z", lower = -10, upper = 10)),
-    repeatParam(2, ParamReal$new(id = "x", lower = 0, upper = 10))
+    repeatParam(2, ParamReal$new(id = "x", lower = 0, upper = 1))
   )
 )
 
@@ -95,6 +95,89 @@ This becomes useful if you want to do operations on parameters of one group like
 
 Transformations are functions with a fixed signature.
 
-* `x` A named list of parameter values. Each list item contains a vector of parameter values of a single parameter.
-* `dict` An environment that can be accessed using the `$` operator. It can contains values that don't belong to any parameter but are important for transformations.
-* `tags` A list of the tags for each parameter. Each parameter can have a various tags indicating additional characteristics.
+* `x` A `data.table` of parameter values. Each list item contains a vector of parameter values of a single parameter.
+* `dict` An environment, that can be accessed using the `$` operator. It can contains values that don't belong to any parameter but are important for transformations.
+* `tags` A list of the tags for each parameter. Each parameter can have various tags indicating additional characteristics.
+
+Transformations are useful to scale parameters:
+
+```{r pstransscale}
+ps = ParamSetFlat$new(
+  params = list(
+    ParamInt$new(id = "z", lower = -3, upper = 3),
+    ParamReal$new(id = "x", lower = 0, upper = 1)
+  ),
+  trafo = function(x, dict, tags) {
+    x$z = 2^x$z
+    x$x = round(x$x * dict$p)
+    return(x)
+  }
+)
+(x = ps$sample(3))
+```
+
+The transformation uses the dictionary and will fail if none is supplied:
+
+```{r pstransscale2}
+ps$transform(x)
+```
+
+The dictionary can always be changed:
+```{r pstransscale2}
+ps$dictionary = list(p = 10)
+ps$transform(x)
+ps$dictionary = list(p = 1000)
+ps$transform(x)
+```
+### Advanced Transformations
+
+The following creates a ParamSet with a transformation that scales the `x` values and returns them as a vector.
+The original parameters will removed from the trafo result.
+Keep in mind that `z` stays untouched and remains after the transformation.
+
+```{r psnumtrans}
+ps = ParamSetFlat$new(
+  params = c(
+    list(ParamInt$new(id = "z", lower = -10, upper = 10)),
+    repeatParam(2, ParamReal$new(id = "x", lower = 0, upper = 1))
+  ),
+  trafo = function(x, dict, tags) {
+    scale = function(x1, x2) c(x1, x2) / sqrt(x1^2+x2^2) 
+    x$x = Map(scale, x$x.repeated.1, x$x.repeated.2)
+    x$x.repeated.1 = NULL
+    x$x.repeated.2 = NULL
+    return(x)
+  }
+)
+```
+
+The output of all value generating functions won't change for a ParamSet that has a `trafo` function.
+Instead these outputs can be put into `ps$transform()` to obtain the desired parameter values.
+
+```{r psnumtrans2}
+x = ps$generateLHSDesign(3)
+ps$transform(x)
+```
+
+For more advanced transformations on repeated parameters you can use `trafoOnRepeatedParam()`:
+
+```{r trafoOnRepeatedParam}
+ps = ParamSetFlat$new(
+  params = c(
+    list(
+      ParamFlag$new(id = "switch"),
+      ParamInt$new(id = "z", lower = 1, upper = 5)),
+    repeatParam(5, ParamReal$new(id = "x", lower = 0, upper = 1))
+  ),
+  trafo = trafoOnRepeatedParam(
+    fun = function(x, dict, tags) {
+      scale = function(z, ...) {
+        x = c(...)[1:z]
+        x / sum(x)
+      }
+      data.table(x = .mapply(scale, cbind(z = dict$z, x), list()))
+    }, repeated.param.id = "x", additional.params = "z")
+  )
+(x = ps$sample(3))
+ps$transform(x)
+```
