enrich test and readme.RMD

--- a/README.Rmd
+++ b/README.Rmd
@@ -106,8 +106,32 @@ Transformations are functions with a fixed signature.
       ParamTree$dn(node = ParamCategorical$new(id = "model", values = c("SVM", "RF"))),
       ParamTree$dn(node = ParamReal$new(id = "C", lower = 0, upper = 100), depend = list(id = "model", val = "SVM")),
       ParamTree$dn(node = ParamCategorical$new(id = "kernel", values = c("rbf", "poly")), depend = list(id = "model", val = "SVM")),
-      ParamTree$dn(node = ParamReal$new(id = "gamma", lower = 0, upper = 100), depend = list(id = "kernel", val = "rbf"))
+      ParamTree$dn(node = ParamReal$new(id = "gamma", lower = 0, upper = 100), depend = list(id = "kernel", val = "rbf")),
+      ParamTree$dn(node = ParamInt$new(id = "n", lower = 1L, upper = 10L), depend = list(id = "kernel", val = "poly"))
       )
   ps$getFirstMandChild$sample()
+  ps$toStringVal()
+```
+
+or one could build a tree mannually
+```{r}
+  ps = ParamHandle$new(node = ParamCategorical$new(id = "Model", values = c("SVM", "RF")))
+  ps$setRoot(ps)
+  temp = ParamHandle$new(node = ParamInt$new(id = "n_tree", lower = 1L, upper = 10L), depend = list(id = "Model", val = "RF"))
+  ntree = ps$addCondChild(temp)
+  temp = ParamHandle$new(node = ParamReal$new(id = "C", lower = 0, upper = 100), depend = list(id = "Model", val = "SVM"))
+  c = ps$addCondChild(temp)
+  temp = ParamHandle$new(node = ParamCategorical$new(id = "kernel", values = c("rbf", "poly")), depend = list(id = "Model", val = "SVM"))
+  kernel = ps$addCondChild(temp)
+  temp = ParamHandle$new(node = ParamReal$new(id = "gamma", lower = 0, upper = 100), depend = list(id = "kernel", val = "rbf"))
+  gamma = kernel$addCondChild(temp)
+  temp = ParamHandle$new(node = ParamInt$new(id = "n", lower = 1L, upper = 10L), depend = list(id = "kernel", val = "poly"))
+  poly = kernel$addCondChild(temp)
+  list.flat = ps$visitor$toFlat()
+  ps$toStringVal()
+  ps$sample()
+  ps$toStringVal()  # after sampling, the string might be different
+  list.flat = ps$visitor$toFlat()
+  poly$getRoot$sample() # use the root to sample
   ps$toStringVal()
 ```
