--- a/vignettes/supplementary/tree_structured_paramsets.Rmd
+++ b/vignettes/supplementary/tree_structured_paramsets.Rmd
@@ -22,7 +22,9 @@ knitr::knit_hooks$set(document = function(x){
 })
 ```
 
-# ParamTree
+# ParamTree 
+
+## Support Vector Machine Hyper-parameter Specification
 Some hyper-parameters could depend on other hyper-parameters. For example, if we have a model multiplexer of Support Vector Machine(SVM) and Random Forest(RF). The hyper-parameter "kernel" only makes sense if the chosen model is "SVM". Moreover, the hyper-parameter of "gamma" only makes sense if the chosen kernel for "SVM" is "rbf". This kind of relationship resembles a tree or directed graph structure where a node is only activated when its corresponding parent node is activated. 
 
 To tackle the above mentioned problem, we have the following code. Each separate hyper-parameter has a unique identifier called "id" which is defined inside the ParamSimple(ParamCategorical, ParamReal, ..etc). These "id"s are extracted from ParamSimple and used as the unique identifier as the node in the tree as well.
@@ -46,6 +48,16 @@ To tackle the above mentioned problem, we have the following code. Each separate
    pst$toStringVal()
 ```
 
+## Neural network architecture specification
+```{r}
+  ps = recursiveParaFac(2,
+      ParamCategorical$new(id = "activation_fun", values = c("sigmoid", "tanh")),
+      ParamReal$new(id = "regulation_lambda", lower = 0, upper = 100.0),
+      ParamInt$new(id = "n_neurons", lower = 1L, upper = 10L)
+      )
+  ps$sample()
+  ps$toStringVal()
+```
 
 ## Advanced features
 
