--- a/vignettes/supplementary/tree_structured_paramsets.Rmd
+++ b/vignettes/supplementary/tree_structured_paramsets.Rmd
@@ -110,9 +110,8 @@ Secondly, we introduce the concept of ParamHandle, which takes argument of `node
     depend = list(id = "kernel", fun = quote(kernel == "poly")))
   poly = kernel$addCondChild(temp)
   ps$render2str()
-  hh = ps$visitor$toFlat()
+  ps$visitor$toFlat()
   poly$getRoot$render2str() # use the root to sample
-  ps$toStringVal()
-  hh = ps$visitor$toFlat()
+  ps$sample(3)
 ```
 
